Fixing Navbar on Mobile and small screens. Changing Branding position on mobile devices

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -22,11 +22,6 @@
    color:  #31AA1C;
 }
 
-.green-border {
-    /* border-bottom: 1px groove #31AA1C; */
-
- }
-
  .btn {
      margin-right: 15px;
  }
